--- a/css/style.css
+++ b/css/style.css
@@ -202,17 +202,14 @@ margin-left: 60px;
 
 
 
-    #page-section .image-section{
-        width: 100%;
-        align-items: center;
-        height: 50%
-        /* background-image: url('../images/Scarecrow.png');
-        background-position: center;
-        background-size: cover;
-        min-height: 100vh; */
-    
-        /* margin-top: 50px; */
-     }
+     #page-section .image-section{
+        /* width: 100%; */
+        /* align-items: center; */
+        /* height: 50% */
+        margin-left: 100px;
+     } 
+
+     
     
 
      
@@ -245,5 +242,16 @@ margin-left: 60px;
 
            
             
+
+
+            /* img {
+                max-width: 100%;
+                max-height: 100%;
+               }
+               .image-section {
+                height: 200px;
+                width: 200px;
+                  align-items: center;
+               } */
 
 }
