--- a/css/style.css
+++ b/css/style.css
@@ -126,12 +126,13 @@ padding-top: 20px;
     background-image: url('../images/Scarecrow.png');
     background-position: center;
     background-size: cover;
-    min-height: 68vh;
+    min-height: 80vh;
 
-    margin-top: 50px;
+    margin-top: 20px;
+    
  }
 
-
+ 
  #page-section .text-section{
 width: 50%;
 min-height: 68vh;
@@ -154,7 +155,7 @@ margin-left: 60px;
 
     #page-section .text-section p{
         font-family:  'Space Mono';
-     padding-top: 10px;
+     padding-top: 20px;
      width: 250px;
      font-weight: 400;
      font-size: 24px;
@@ -165,7 +166,7 @@ margin-left: 60px;
 
      
     #page-section .text-section .text-button{
-    padding-top: 30px;
+    padding-top: 50px;
     }
 
     #page-section .text-section .text-button .btn{
@@ -179,79 +180,101 @@ margin-left: 60px;
 
 
 @media (max-width: 426px){
-    /* .header{
+
+    /* .flex-sm-column{
+        flex-direction:column;
+       }
+
+
+#page-section .image-section{
+    width: 100%;
+}
+
+
+#page-section .text-section{
+    width: 100%;
+} */
+
+
+  /* .header{
         flex-direction: column;
         align-items: flex-start;
      
 } */
-    .flex-sm-column{
-        flex-direction:column;
-       }
-
-       /* .image-section{
-        width: 100%;
-       
-     } */
-    
-       /* .text-section {
-      width: 100%;
-       align-items: flex-start; 
-      text-align: start;
-    
-    }  */
 
 
+.flex-sm-column{
+    flex-direction:column;
+   }
 
-     #page-section .image-section{
-        /* width: 100%; */
-        /* align-items: center; */
-        /* height: 50% */
-        margin-left: 100px;
-     } 
+   /* .image-section{
+    width: 100%;
+   
+ } */
 
-     
-    
+   /* .text-section {
+  width: 100%;
+   align-items: flex-start; 
+  text-align: start;
 
-     
-    #page-section .text-section{
-        margin-left: 10px;
-        width: 100%;
+}  */
 
 
+
+ #page-section .image-section{
+    /* width: 100%; */
+    /* align-items: center; */
+    /* height: 50% */
+    margin-left: 100px;
+ } 
+
+ 
+
+
+ 
+#page-section .text-section{
+    margin-left: 10px;
+    width: 100%;
+
+
+}
+
+
+
+#page-section .text-section h1{
+    width: 285px;
+    font-weight: 700;
+    font-size: 64px;
+    letter-spacing: -0.035em;
+    font-family:'Space Mono';
     }
 
 
 
-    #page-section .text-section h1{
-        width: 285px;
-        font-weight: 700;
-        font-size: 64px;
+    #page-section .text-section p{
+        width:328px ;
+        font-weight:400 ;
+        font-size: 18px;
         letter-spacing: -0.035em;
         font-family:'Space Mono';
         }
 
+       
+        
 
 
-        #page-section .text-section p{
-            width:328px ;
-            font-weight:400 ;
-            font-size: 18px;
-            letter-spacing: -0.035em;
-            font-family:'Space Mono';
-            }
-
-           
-            
-
-
-            /* img {
-                max-width: 100%;
-                max-height: 100%;
-               }
-               .image-section {
-                height: 200px;
-                width: 200px;
-                  align-items: center;
-               } */
+        /* img {
+            max-width: 100%;
+            max-height: 100%;
+           }
+           .image-section {
+            height: 200px;
+            width: 200px;
+              align-items: center;
+           } */
 
 }
+
+
+
+
