--- a/css/style.css
+++ b/css/style.css
@@ -254,9 +254,9 @@ margin-left: 60px;
 
 
 #page-section .text-section h1{
-    width: 328px;
+    width: 300gitpx;
     font-weight: 700;
-    font-size: 64px;
+    font-size: 50px;
     letter-spacing: -0.035em;
     font-family:'Space Mono';
     ;
