--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ margin-left: 60px;
 
 
 #page-section .text-section h1{
-    width: 300gitpx;
+    width: 300px;
     font-weight: 700;
     font-size: 50px;
     letter-spacing: -0.035em;
