--- a/css/style.css
+++ b/css/style.css
@@ -230,19 +230,19 @@ margin-left: 60px;
     background-image: url('../images/Scarecrow.png');
     background-position: center;
     background-size: cover;
-    height: 85vh;
+    height: 30vhvh;
     display: block;
    
 
  } 
 
  
- /* img
- {
-     max-width: 100%;
-     /* min-width: 300px; */
-     /* height: auto;
- } */ */
+ #page-section .image-section img{
+   max-height: 100%;
+   
+
+ } 
+
 
  
 #page-section .text-section{
@@ -264,18 +264,7 @@ margin-left: 60px;
 
 
 
-    /* #page-section .text-section h1{
-        Width: 350px;
-        Height:142px;
-        Top:407px;
-        Left:24px;
-        font-family:Space Mono ;
-font-weight:700;
-Size:48px;
-line-height:71.09px;
-letter-spacing:-3.5%
-        } */
-
+   
 
     #page-section .text-section p{
         width:328px ;
@@ -290,17 +279,8 @@ letter-spacing:-3.5%
         
 
 
-        /* img {
-            max-width: 100%;
-            max-height: 100%;
-           }
-           .image-section {
-            height: 200px;
-            width: 200px;
-              align-items: center;
-           } */
-
-
+       
+  
         }
 
 
