--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ margin-left: 60px;
     background-image: url('../images/Scarecrow.png');
     background-position: center;
     background-size: cover;
-    height: 30vhvh;
+    height: 30vh;
     display: block;
    
 
