--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ margin-left: 60px;
     background-image: url('../images/Scarecrow.png');
     background-position: center;
     background-size: cover;
-    height: 30vh;
+    /* height: 30vh; */
     display: block;
    
 
@@ -239,7 +239,6 @@ margin-left: 60px;
  
  #page-section .image-section img{
    max-height: 100%;
-   
 
  } 
 
