--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ padding-top: 20px;
     background-position: center;
     background-size: cover;
     /* min-height: 80vh; */
-    height: 50%;
+    height: 50vh;
 
     margin-top: 20px;
     
