--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,9 @@ margin-left: 60px;
 
        
         
-
+        #page-section .text-section .text-button{
+            padding-top: 30px;
+            }
 
        
   
