--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,7 @@ margin-left: 60px;
  
  #page-section .image-section img{
    max-height: 100%;
+   max-width: 100%;
 
  } 
 
@@ -262,6 +263,7 @@ margin-left: 60px;
     font-size: 50px;
     letter-spacing: -0.035em;
     font-family:'Space Mono';
+    padding-top: 5px
     ;
     } 
 
