--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ margin-left: 60px;
     font-size: 50px;
     letter-spacing: -0.035em;
     font-family:'Space Mono';
-    /* padding-top: 5px */
+    padding-top: 5px
     ;
     } 
 
