--- a/css/style.css
+++ b/css/style.css
@@ -134,8 +134,7 @@ padding-top: 20px;
     background-size: cover;
     /* min-height: 80vh; */
     height: 50vh;
-
-    margin-top: 20px;
+     margin-top: 50px;
     
  }
 
@@ -263,8 +262,7 @@ margin-left: 60px;
     font-size: 50px;
     letter-spacing: -0.035em;
     font-family:'Space Mono';
-    padding-top: 5px
-    ;
+    padding-top: 5px;
     } 
 
 
