--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@
     display: flex;
 }
 
+h3{
+    padding-top: 10px;
+}
+
+
 
 #page-section{
    min-height: 80vh;   
@@ -44,7 +49,7 @@ margin-left: 60px;
 
 
  #page-section .text-section h1{
-    width: 480px;
+    width: 400px;
     font-weight: 600;
     font-size: 64px;
     letter-spacing: -0.035em;
@@ -119,26 +124,28 @@ margin-left: 60px;
 
 
  #page-section .image-section{
-    min-width: 100%; 
-    max-width: 300px;
+     /* width: 100%;  */
+    /* max-width: 300px;   */
     /* align-items: center; */
     /* height: 50% */
-    /* margin-left: 100px; */
+    margin-left: 100px;
     background-image: url('../images/Scarecrow.png');
-    background-position: center;
+    /* background-position: center; */
     background-size: cover;
     /* height: 30vh; */
     display: block;
+    height: 80vh;
+     margin-top: 20px;
    
 
  } 
 
  
- #page-section .image-section img{
+ /* #page-section .image-section img{
    max-height: 100%;
    max-width: 100%;
 
- } 
+ }  */
 
 
  
