--- a/css/style.css
+++ b/css/style.css
@@ -134,18 +134,18 @@ margin-left: 60px;
     background-size: cover;
     /* height: 30vh; */
     display: block;
-    height: 80vh;
+    height: 60vh;
      margin-top: 20px;
    
 
  } 
 
  
- /* #page-section .image-section img{
+ #page-section .image-section img{
    max-height: 100%;
    max-width: 100%;
 
- }  */
+ } 
 
 
  
