--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ margin-left: 60px;
 
 
  #page-section .image-section{
-     /* width: 100%;  */
+     width: 50%; 
     /* max-width: 300px;   */
     /* align-items: center; */
     /* height: 50% */
