--- a/css/style.css
+++ b/css/style.css
@@ -124,13 +124,13 @@ margin-left: 60px;
 
 
  #page-section .image-section{
-     width: 50%; 
+     width: 40%; 
     /* max-width: 300px;   */
-    /* align-items: center; */
+    align-items: center;
     /* height: 50% */
     margin-left: 100px;
     background-image: url('../images/Scarecrow.png');
-    /* background-position: center; */
+    background-position: center;
     background-size: cover;
     /* height: 30vh; */
     display: block;
