--- a/css/style.css
+++ b/css/style.css
@@ -26,29 +26,20 @@ h3{
 }
 
 
-/* #page-section .image-section{
+#page-section .image-section{
     width: 50%;
     background-image: url('../images/Scarecrow.png');
     background-position: center;
     background-size: cover;
     /* min-height: 80vh; */
-    /* height: 60vh; */
-     /* margin-top: 30px; */
+    height: 80vh;
+     margin-top: 30px;
      /* height: 80vh;
      margin-top: 30px; */
     
- 
- */
+ }
 
 
-
-
-
-
-
-
-
- 
  
  #page-section .text-section{
 width: 50%;
@@ -96,61 +87,34 @@ margin-left: 60px;
 /* Mobile View */
 
 
-@media (max-width: 426px){
-
-    /* .flex-sm-column{
-        flex-direction:column;
-       }
-
-
-#page-section .image-section{
-    width: 100%;
-}
-
-
-
-
-  /* .header{
-        flex-direction: column;
-        align-items: flex-start;
-     
-} */
+@media (max-width: 426px) {
 
 
 .flex-sm-column{
     flex-direction:column;
    }
 
-   /* .image-section{
-    width: 100%;
-   
- } */
 
-   /* .text-section {
-  width: 100%;
-   align-items: flex-start; 
-  text-align: start;
-
-}  */
-
-
-
- #page-section .image-section{
+  #page-section .image-section{
      width: 40%; 
     /* max-width: 300px;   */
-    align-items: center;
     /* height: 50% */
-    margin-left: 100px;
+    /* margin-left: 100px;
     background-image: url('../images/Scarecrow.png');
     background-position: center;
-    background-size: cover;
+    background-size: cover; */
     /* height: 30vh; */
-    display: block;
-    height: 60vh;
-     margin-top: 20px;
+    /* display: block;
+    height: 60vh; */
+     /* margin-top: 20px; */
    
 
- } 
+ }  */
+
+
+
+
+
 
  
  #page-section .image-section img{
@@ -199,7 +163,7 @@ margin-left: 60px;
 
        
   
-        }
-
+}
+        
 
 
