--- a/css/style.css
+++ b/css/style.css
@@ -96,14 +96,21 @@ margin-left: 60px;
 
 
   #page-section .image-section{
-     width: 40%; 
+     width: 90vh; 
+     margin-left: 50px;
+     /* background-position: center; */
+   
+     
+     /* align-items: center;
+     justify-content: center;
+     text-align: center; */
     /* max-width: 300px;   */
     /* height: 50% */
     /* margin-left: 100px;
     background-image: url('../images/Scarecrow.png');
     background-position: center;
     background-size: cover; */
-    /* height: 30vh; */
+     /* height: 30vh;  */
     /* display: block;
     height: 60vh; */
      /* margin-top: 20px; */
@@ -117,11 +124,9 @@ margin-left: 60px;
 
 
  
- #page-section .image-section img{
-   max-height: 100%;
-   max-width: 100%;
-
- } 
+ /* #page-section .image-section img{
+   height: 100%;
+ }  */
 
 
  
