--- a/css/style.css
+++ b/css/style.css
@@ -96,8 +96,8 @@ margin-left: 60px;
 
 
   #page-section .image-section{
-     width: 90vh; 
-     margin-left: 50px;
+     width: 80%; 
+     margin-left: 40px;
      /* background-position: center; */
    
      
