--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ margin-left: 60px;
 
 
   #page-section .image-section{
-     width: 90vh; 
+     width: 80%; 
      /* margin-left: 40px; */
      /* background-position: center; */
    
