--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ margin-left: 60px;
 
   #page-section .image-section{
      width: 50%; 
-     background-size: 50%;
+     background-size:inherit
      /* margin-left: 40px; */
      /* background-position: center; */
    
