--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ margin-left: 60px;
   #page-section .image-section{
      width: 50%; 
      background-position: center;
-     
+     height: 60vh;
      margin-left: 40px;
      /* background-position: center; */
    
@@ -114,16 +114,16 @@ margin-left: 60px;
     
      /* height: 30vh;  */
     /* display: block;
-    height: 60vh; */
+     /* height: 60vh;  */
      /* margin-top: 20px; */
    
 
  }  
 
 
- #page-section{
+ /* #page-section{
     min-height: 50vh;   
- }
+ } */
 
 
 
