--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,8 @@ margin-left: 60px;
   #page-section .image-section{
      width: 60%; 
      background-position: center;
-     height: 50vh;
+     height: 30vh;
+       max-width: 300px;
      margin-left: 40px;
      /* background-position: center; */
    
