--- a/css/style.css
+++ b/css/style.css
@@ -56,13 +56,13 @@ margin-left: 60px;
     font-weight: 600;
     font-size: 64px;
     letter-spacing: -0.035em;
-    font-family:'Space Mono';
+    font-family:'monospace';
     }
 
 
 
     #page-section .text-section p{
-        font-family:  'Space Mono';
+        font-family:monospace;
      padding-top: 20px;
      width: 250px;
      font-weight: 400;
@@ -157,8 +157,8 @@ margin-left: 60px;
    
 
     #page-section .text-section p{
-        width:328px ;
-        /* width:200px ; */
+        /* width:328px ; */
+        width:199px ;
         font-weight:400 ;
         font-size: 18px;
         letter-spacing: -0.035em;
