--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@
 
 h3{
     padding-top: 10px;
+    font-family:Inconsolata;
+    font-size: 19px;
 }
 
 
@@ -33,7 +35,7 @@ h3{
     background-size: cover;
     /* min-height: 80vh; */
     height: 80vh;
-     margin-top: 30px;
+     margin-top: 10px;
      /* height: 80vh;
      margin-top: 30px; */
     
@@ -56,7 +58,7 @@ margin-left: 60px;
     font-weight: 600;
     font-size: 64px;
     letter-spacing: -0.035em;
-    font-family:'monospace';
+    font-family:monospace;
     }
 
 
@@ -144,11 +146,12 @@ margin-left: 60px;
 
 
 #page-section .text-section h1{
-      width: 285px;;
+      /* width: 285px;; */
+      width: 400px;;
     font-weight: 700;
     font-size: 50px;
     letter-spacing: -0.035em;
-    font-family:'Space Mono';
+    font-family:monospace;
     padding-top: 5px;
     } 
 
@@ -158,11 +161,11 @@ margin-left: 60px;
 
     #page-section .text-section p{
         /* width:328px ; */
-        width:199px ;
+        width:300px ;
         font-weight:400 ;
         font-size: 18px;
         letter-spacing: -0.035em;
-        font-family:'Space Mono';
+        font-family:monospace;
         }
 
        
